# langgraph_system_generator

./: .dockerignore  .env.example  .gitignore  Dockerfile  GEMINI.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PLAN.md  PHASE5_COMPLETE.md  README.md  SYSTEM_SPEC.md  USAGE.md  build_index.py  classes.dot  classes.html  classes.mmd  classes_flowchart.mmd  classes_stacked.mmd  packages.dot  packages.html  packages.mmd  pyproject.toml  report.md  requirements.txt  setup.py
.github/agents/: README.md  lnf-cli.agent.md  lnf-docs-agent.agent.md  lnf-docs.agent.md  lnf-foundation.agent.md  lnf-generator.agent.md  lnf-lead.agent.md  lnf-notebook.agent.md  lnf-patterns.agent.md  lnf-qa.agent.md  lnf-rag.agent.md  lnf-security.agent.md  lnf-webui.agent.md
.github/workflows/: diagram.yml  wiki-from-code.yml  (+1 more)
docs/: LIBRARY_FLOW_ANALYSIS.md  NOTEBOOK_OUTPUT_FEATURE.md  NOTEBOOK_OUTPUT_GUIDE.md  PHASE2_COMPLETE.md  PHASE3_IMPLEMENTATION.md  PHASE3_SUMMARY.md  PHASE5_COMPLETE.md  QA_REPAIR_SYSTEM.md  WEB_DEPLOYMENT.md  WEB_INTERFACE_SUMMARY.md  WEB_UI_ENHANCEMENTS.md  WEB_UI_IMPLEMENTATION_SUMMARY.md  WEB_UI_VISUAL_GUIDE.md  dev.md  patterns.md
examples/: README.md  __init__.py  complete_workflow.py  critique_revise_pattern_example.py  generate_code.py  generate_notebook.py  router_pattern_example.py  subagents_pattern_example.py
langgraph_system_generator/: __init__.py
sample_outputs/: cyoa_c_notebook_fixed.ipynb
scripts/: README.md  build_index.py  demo_cached_docs.py  demo_retrieval.py  precache_docs.py
tests/: __init__.py  conftest.py  stub_run.py
(+104 files in other folders)
